--- a/assets/scss/Component/_experiences.scss
+++ b/assets/scss/Component/_experiences.scss
@@ -77,10 +77,9 @@
     }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 576px) {
     .expreance-section {
-        padding: 0px 0;
-
+        padding: 79px 0 35px 0;
         .expreance-text {
             h3 {
                 font-size: 34px;
@@ -91,8 +90,36 @@
         .expreance-title {
             margin-bottom: 33px;
         }
+        .botm-left {
+           h4{
+            font-size: 18px;
+           }
+        }
         .botm-right {
-            padding: 30px 0;
+            padding: 20px 0;
+            .p1st{
+                font-size: 18px;
+                font-weight: 600;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 425px) {
+    .expreance-section {
+        padding: 0px 0;
+
+        .expreance-text {
+            h3 {
+                font-size: 28px;
+                margin-bottom: 40px;
+            }
+        }
+
+        .expreance-title {
+            margin-bottom: 33px;
+        }
+        .botm-right {
+            padding: 20px 0;
         }
     }
 }
