--- a/assets/scss/Component/_latest.scss
+++ b/assets/scss/Component/_latest.scss
@@ -1,5 +1,6 @@
 .latest-section {
-//   background-color: $whiteColorShadow;
+    padding: 0px 0 135px 0;
+
     .latest-title {
         text-align: center;
         font-family: "Tangerine", cursive;
@@ -12,9 +13,12 @@
     }
 
     .card {
+        width: 95%;
         border: 0;
+        border-radius: 0;
         background-color: $whiteColor;
-        box-shadow: 0.1px 1px 14px -7px ;
+        box-shadow: 0.1px 1px 14px -7px;
+
         .card-head {
             position: relative;
 
@@ -26,6 +30,10 @@
                 bottom: -26px;
                 left: 0;
                 border: 0;
+                color: $whiteColor;
+                font-size: 20px;
+                font-weight: 600;
+
             }
         }
 
@@ -38,20 +46,125 @@
 
             .card-title {
                 color: $MarketingTextColor;
-                &:hover{
+
+                &:hover {
                     color: $MarketingThemeColor;
                 }
             }
-            .card-date{
+
+            .card-date {
                 color: $MarketingThemeColor;
                 text-decoration: none;
-                p{
+
+                p {
                     margin: 20px 0;
                 }
             }
-            .read-more{
+
+            .read-more {
                 color: $MarketingThemeColor;
                 text-decoration: none;
+
+                &:hover {
+                    text-decoration: underline;
+                    transition: all 0.3ms ease;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1440px) {
+    .latest-section {
+        padding: 0px 0 135px 0;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .latest-section {
+        padding: 0px 0 135px 0;
+
+        .card {
+            width: 95%;
+
+            .card-body {
+                margin-top: 23px;
+
+                .card-date {
+                    p {
+                        margin: 10px 0;
+                    }
+                }
+
+                .card-text {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .latest-section {
+        padding: 0px 0 20px 0;
+
+        .card {
+            width: 100%;
+            margin-bottom: 25px;
+
+            .card-body {
+                margin-top: 23px;
+
+                .card-date {
+                    p {
+                        margin: 22px 0;
+                    }
+                }
+
+                .card-text {
+                    margin-bottom: 20px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .latest-section {
+        padding: 0px 0 35px 0;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .latest-section {
+        padding: 0px 0 20px 0;
+
+        .latest-title {
+
+            padding-bottom: 33px;
+
+            h1 {
+                margin-bottom: -15px;
+                font-size: 55PX;
+            }
+        }
+
+        .card {
+            width: 100%;
+            margin-bottom: 25px;
+
+            .card-body {
+                margin-top: 23px;
+
+                .card-date {
+                    p {
+                        margin: 22px 0;
+                    }
+                }
+
+                .card-text {
+                    margin-bottom: 20px;
+                }
             }
         }
     }
