--- a/assets/scss/Component/_touch.scss
+++ b/assets/scss/Component/_touch.scss
@@ -1,7 +1,8 @@
 .touch-section {
     position: relative;
     margin: 135px 0;
-    img{
+
+    img {
         position: absolute;
         top: 0;
         left: 0;
@@ -9,6 +10,7 @@
         width: 100%;
         height: 800px;
     }
+
     .tastimonial-wraper {
         background-color: $MarketingTextColor;
         color: $whiteColor;
@@ -42,47 +44,49 @@
             }
 
         }
-        
+
     }
-    .touch-right-side{
+
+    .touch-right-side {
         h4 {
             color: $whiteColor;
             text-align: start;
             margin-bottom: 24px;
         }
-    
+
         form {
-            .btn:hover{
+            .btn:hover {
                 background-color: $MarketingParagraphColor;
             }
+
             textarea {
                 background-color: transparent;
                 border: 0;
                 width: 100%;
                 border-bottom: 1px solid $whiteColor;
             }
-    
+
             textarea::placeholder {
                 color: $whiteColor;
                 font-size: 16px;
                 font-weight: 500;
             }
-    
+
             input {
-    
+
                 background-color: transparent;
                 border: 0;
                 border-bottom: 1px solid $whiteColor;
                 height: 55px;
                 margin-bottom: 52px;
             }
-    
+
             input::placeholder {
                 color: $whiteColor;
                 font-size: 16px;
                 font-weight: 500;
             }
-    
+
             button {
                 width: 132px;
                 height: 52px;
@@ -99,19 +103,23 @@
 
 @media only screen and (max-width: 1024px) {
     .touch-section {
-        img{
+        img {
             height: 800px;
         }
+
         margin: 35px 0;
+
         .tastimonial-wraper {
             padding: 121px 41px 30px 77px;
         }
     }
 }
+
 @media only screen and (max-width: 768px) {
     .touch-section {
         .tastimonial-wraper {
             padding: 100px 41px 30px 42px;
+
             .main-text {
                 font-size: 20px;
                 font-weight: 500;
@@ -119,22 +127,56 @@
         }
     }
 }
-@media only screen and (max-width: 425px) {
+
+@media only screen and (max-width: 576px) {
     .touch-section {
-        img{
+        img {
             height: 965px;
         }
+
         .tastimonial-wraper {
             margin-top: 0px;
-            padding: 36px 33px 24px 20px;
+            padding: 61px 66px 40px 71px;
+
             .main-text {
                 font-size: 14px;
                 font-weight: 500;
                 line-height: 30px;
             }
         }
-        .touch-right-side{
+
+        .touch-right-side {
             margin-top: 30px;
+
+            form {
+                input {
+                    margin-bottom: 30px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .touch-section {
+        img {
+            height: 965px;
+        }
+
+        .tastimonial-wraper {
+            margin-top: 0px;
+            padding: 36px 33px 24px 20px;
+
+            .main-text {
+                font-size: 14px;
+                font-weight: 500;
+                line-height: 30px;
+            }
+        }
+
+        .touch-right-side {
+            margin-top: 30px;
+
             form {
                 input {
                     margin-bottom: 30px;
