--- a/assets/scss/Component/_faq.scss
+++ b/assets/scss/Component/_faq.scss
@@ -13,6 +13,7 @@
     }
 
     .test {
+        font-family: "Poppins", sans-serif;
         ul.accordion-list {
             position: relative;
             display: block;
