--- a/assets/scss/Component/_latest.scss
+++ b/assets/scss/Component/_latest.scss
@@ -13,6 +13,7 @@
     }
 
     .card {
+        font-family: "Poppins", sans-serif;
         width: 95%;
         border: 0;
         border-radius: 0;
