--- a/assets/scss/Component/_portfolio.scss
+++ b/assets/scss/Component/_portfolio.scss
@@ -13,6 +13,7 @@
 
     .main-text {
         h1 {
+            font-family: "Poppins", sans-serif;
             color: transparent;
             -webkit-text-stroke: 1px $MarketingTextColor;
 
