--- a/assets/scss/Component/_touch.scss
+++ b/assets/scss/Component/_touch.scss
@@ -1,7 +1,7 @@
 .touch-section {
     position: relative;
     margin: 135px 0;
-
+    font-family: "Poppins", sans-serif;
     img {
         position: absolute;
         top: 0;
